[project]
name = "utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jed Shed", email = "jedshed@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.33.1",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
